--- a/checkout.html
+++ b/checkout.html
@@ -228,7 +228,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	}
 </script>
 	
-
+<script src="https://assets.adobedtm.com/4ef014d90ea4/76ac039bae16/launch-669969ef5e79.min.js" async></script>
 <!-- //animation-effect -->
 </head>
 	
