--- a/payment.html
+++ b/payment.html
@@ -9,14 +9,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <head>
     <title>Best Store | Payment </title>
-	
-	<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P9Q2S9B');</script>
-<!-- End Google Tag Manager -->
 
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -160,13 +152,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         new WOW().init();
     </script>
     <!-- //animation-effect -->
+<script src="https://assets.adobedtm.com/4ef014d90ea4/76ac039bae16/launch-669969ef5e79.min.js" async></script>	
 </head>
 
-<body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9Q2S9B"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->	
+<body>	
     <!-- header -->
     <div class="header">
         <div class="container">
